# luca

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py
backend/app/: __init__.py  artifacts.py  auth.py  bedrock.py  config.py  discovery.py  generation.py  ingestion.py  main.py  model_io.py  models.py  planner.py  storage.py  worker.py  workflows.py
frontend/: app.js  config.js  index.html  styles.css
infra/: template.yaml
scripts/: check.sh
src/: api_server.py  config.py
src/agents/: generator.py  introspector.py
src/elasticsearch/: client.py  schemas.py
tests/: test_api.py  test_auth.py  test_config.py  test_generation.py  test_ingestion.py  test_planner.py
